--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-syntax-flow": "^7.25.7",
+    "@babel/plugin-transform-react-jsx": "^7.25.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fullcalendar/core": "^6.1.15",
@@ -13,8 +15,10 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@mui/icons-material": "^5.15.16",
     "@mui/material": "^5.15.16",
+    "@mui/system": "^6.1.3",
     "@mui/x-data-grid": "^7.4.0",
     "@reduxjs/toolkit": "^2.2.3",
+    "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -26,7 +30,9 @@
     "react-router-dom": "6.23.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.5",
+    "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "typescript": "^5.6.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
@@ -53,6 +59,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy": "http://localhost:8000",
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
-  ,"proxy": "http://localhost:8000"
 }
