--- a/vercel.json
+++ b/vercel.json
@@ -5,21 +5,12 @@
     {
       "src": "frontend/package.json",
       "use": "@vercel/static-build",
-      "config": { "distDir": "frontend/build" }
+      "config": { "distDir": "build" }
     },
     {
-      "src": "backend/**/*.js",
-      "use": "@vercel/node"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/backend/src/$1"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/frontend/$1"
+      "src": "backend/index.js",
+      "use": "@vercel/node",
+      "config": { "outputDirectory": "build" } 
     }
   ]
 }
